[project]
name = "payment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
