[project]
name = "payment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
